name:                dozens
version:             0.1.0
synopsis:            dozens(https://dozens.jp/) api library
description:         dozens(https://dozens.jp/) api library
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014-2015 Hirotomo Moriwaki
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.API.Dozens.Raw
  -- other-modules:       
  build-depends:       base        >=4.8  && <4.9
                     , http-client >=0.4  && <0.5
                     , http-types  >=0.8  && <0.9
                     , aeson       >=0.9  && <0.10
                     , text        >=1.2  && <1.3
                     , bytestring  >=0.10 && <0.11
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
